--- a/ArtFX_GameEngine/ArtFX_GameEngine.vcxproj
+++ b/ArtFX_GameEngine/ArtFX_GameEngine.vcxproj
@@ -24,16 +24,20 @@
     <ClCompile Include="Engine\Core\Class\Scene\Scene.cpp" />
     <ClCompile Include="Engine\Core\Dispatcher\EventDispatcher.cpp" />
     <ClCompile Include="Engine\Core\Render\Asset.cpp" />
+    <ClCompile Include="Engine\Core\Render\Component\AnimatedSpriteComponent.cpp" />
     <ClCompile Include="Engine\Core\Render\Component\SpriteComponent.cpp" />
     <ClCompile Include="Engine\Core\Render\Renderer.cpp" />
     <ClCompile Include="Engine\Core\Render\Texture.cpp" />
     <ClCompile Include="Engine\Core\Render\Window.cpp" />
     <ClCompile Include="Engine\Debug\Log.cpp" />
+    <ClCompile Include="Engine\Input\InputEvent.cpp" />
+    <ClCompile Include="Engine\Input\InputManager.cpp" />
     <ClCompile Include="Engine\Math\Rectangle.cpp" />
     <ClCompile Include="Engine\Math\Time.cpp" />
     <ClCompile Include="Engine\Math\Transform2D.cpp" />
     <ClCompile Include="Engine\Math\Vec2.cpp" />
     <ClCompile Include="Engine\Math\Vec3.cpp" />
+    <ClCompile Include="Engine\Miscellaneous\Component\MoveComponent.cpp" />
     <ClCompile Include="Engine\Physic\Components\BoxColliderComponent.cpp" />
     <ClCompile Include="Engine\Storage\Assets.cpp" />
     <ClCompile Include="Game.cpp" />
@@ -50,17 +54,22 @@
     <ClInclude Include="Engine\Core\Dispatcher\EventDispatcher.h" />
     <ClInclude Include="Engine\Core\Dispatcher\IObserver.h" />
     <ClInclude Include="Engine\Core\Render\Asset.h" />
+    <ClInclude Include="Engine\Core\Render\Component\AnimatedSpriteComponent.h" />
     <ClInclude Include="Engine\Core\Render\Component\SpriteComponent.h" />
     <ClInclude Include="Engine\Core\Render\Renderer.h" />
     <ClInclude Include="Engine\Core\Render\Texture.h" />
     <ClInclude Include="Engine\Core\Render\Window.h" />
     <ClInclude Include="Engine\Debug\Log.h" />
+    <ClInclude Include="Engine\Input\IInputListener.h" />
+    <ClInclude Include="Engine\Input\InputEvent.h" />
+    <ClInclude Include="Engine\Input\InputManager.h" />
     <ClInclude Include="Engine\Math\Maths.h" />
     <ClInclude Include="Engine\Math\Rectangle.h" />
     <ClInclude Include="Engine\Math\Time.h" />
     <ClInclude Include="Engine\Math\Transform2D.h" />
     <ClInclude Include="Engine\Math\Vec2.h" />
     <ClInclude Include="Engine\Math\Vec3.h" />
+    <ClInclude Include="Engine\Miscellaneous\Component\MoveComponent.h" />
     <ClInclude Include="Engine\Physic\Components\BoxColliderComponent.h" />
     <ClInclude Include="Engine\Storage\Assets.h" />
     <ClInclude Include="Game.h" />
@@ -127,7 +136,7 @@
       <PreprocessorDefinitions>WIN32;_DEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
       <AdditionalIncludeDirectories>$(SolutionDir)\Dependencies\GL\SDL\include;$(SolutionDir)\Dependencies\glew-2.2.0-win32\glew-2.2.0\include\GL;$(SolutionDir)\Dependencies\SDL2_image-2.8.2\include;$(SolutionDir)\ArtFX_GameEngine\Engine;$(SolutionDir)\ArtFX_GameEngine\Game;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
-      <LanguageStandard>stdcpplatest</LanguageStandard>
+      <LanguageStandard>stdcpp20</LanguageStandard>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
