[wip] Double renderer

--- a/ArtFX_GameEngine/ArtFX_GameEngine.vcxproj
+++ b/ArtFX_GameEngine/ArtFX_GameEngine.vcxproj
@@ -26,17 +26,22 @@
     <ClCompile Include="Engine\Core\Render\Asset.cpp" />
     <ClCompile Include="Engine\Core\Render\Component\AnimatedSpriteComponent.cpp" />
     <ClCompile Include="Engine\Core\Render\Component\SpriteComponent.cpp" />
-    <ClCompile Include="Engine\Core\Render\Renderer.cpp" />
+    <ClCompile Include="Engine\Core\Render\OpenGL\VertexArray.cpp" />
+    <ClCompile Include="Engine\Core\Render\RendererSdl.cpp" />
     <ClCompile Include="Engine\Core\Render\Texture.cpp" />
     <ClCompile Include="Engine\Core\Render\Window.cpp" />
     <ClCompile Include="Engine\Debug\Log.cpp" />
     <ClCompile Include="Engine\Input\InputEvent.cpp" />
     <ClCompile Include="Engine\Input\InputManager.cpp" />
+    <ClCompile Include="Engine\Math\Matrix4.cpp" />
+    <ClCompile Include="Engine\Math\Matrix4Row.cpp" />
+    <ClCompile Include="Engine\Math\Quaternion.cpp" />
     <ClCompile Include="Engine\Math\Rectangle.cpp" />
     <ClCompile Include="Engine\Math\Time.cpp" />
     <ClCompile Include="Engine\Math\Transform2D.cpp" />
     <ClCompile Include="Engine\Math\Vec2.cpp" />
     <ClCompile Include="Engine\Math\Vec3.cpp" />
+    <ClCompile Include="Engine\Math\Vec4.cpp" />
     <ClCompile Include="Engine\Miscellaneous\Component\MoveComponent.cpp" />
     <ClCompile Include="Engine\Miscellaneous\Component\PlayerController.cpp" />
     <ClCompile Include="Engine\Physic\Components\BoxColliderComponent.cpp" />
@@ -57,7 +62,9 @@
     <ClInclude Include="Engine\Core\Render\Asset.h" />
     <ClInclude Include="Engine\Core\Render\Component\AnimatedSpriteComponent.h" />
     <ClInclude Include="Engine\Core\Render\Component\SpriteComponent.h" />
-    <ClInclude Include="Engine\Core\Render\Renderer.h" />
+    <ClInclude Include="Engine\Core\Render\Interface\IRenderer.h" />
+    <ClInclude Include="Engine\Core\Render\OpenGL\VertexArray.h" />
+    <ClInclude Include="Engine\Core\Render\RendererSdl.h" />
     <ClInclude Include="Engine\Core\Render\Texture.h" />
     <ClInclude Include="Engine\Core\Render\Window.h" />
     <ClInclude Include="Engine\Debug\Log.h" />
@@ -65,11 +72,15 @@
     <ClInclude Include="Engine\Input\InputEvent.h" />
     <ClInclude Include="Engine\Input\InputManager.h" />
     <ClInclude Include="Engine\Math\Maths.h" />
+    <ClInclude Include="Engine\Math\Matrix4.h" />
+    <ClInclude Include="Engine\Math\Matrix4Row.h" />
+    <ClInclude Include="Engine\Math\Quaternion.h" />
     <ClInclude Include="Engine\Math\Rectangle.h" />
     <ClInclude Include="Engine\Math\Time.h" />
     <ClInclude Include="Engine\Math\Transform2D.h" />
     <ClInclude Include="Engine\Math\Vec2.h" />
     <ClInclude Include="Engine\Math\Vec3.h" />
+    <ClInclude Include="Engine\Math\Vec4.h" />
     <ClInclude Include="Engine\Miscellaneous\Component\MoveComponent.h" />
     <ClInclude Include="Engine\Miscellaneous\Component\PlayerController.h" />
     <ClInclude Include="Engine\Physic\Components\BoxColliderComponent.h" />
