--- a/ArtFX_GameEngine/ArtFX_GameEngine.vcxproj
+++ b/ArtFX_GameEngine/ArtFX_GameEngine.vcxproj
@@ -21,10 +21,12 @@
   <ItemGroup>
     <ClCompile Include="Engine\Core\Class\Actor\Actor.cpp" />
     <ClCompile Include="Engine\Core\Class\Component\Component.cpp" />
+    <ClCompile Include="Engine\Core\Class\Mesh\Mesh.cpp" />
     <ClCompile Include="Engine\Core\Class\Scene\Scene.cpp" />
     <ClCompile Include="Engine\Core\Dispatcher\EventDispatcher.cpp" />
     <ClCompile Include="Engine\Core\Render\Asset.cpp" />
     <ClCompile Include="Engine\Core\Render\Component\AnimatedSpriteComponent.cpp" />
+    <ClCompile Include="Engine\Core\Render\Component\MeshComponent.cpp" />
     <ClCompile Include="Engine\Core\Render\Component\SpriteComponent.cpp" />
     <ClCompile Include="Engine\Core\Render\OpenGL\RendererGL.cpp" />
     <ClCompile Include="Engine\Core\Render\OpenGL\VertexArray.cpp" />
@@ -46,11 +48,12 @@
     <ClCompile Include="Engine\Math\Vec2.cpp" />
     <ClCompile Include="Engine\Math\Vec3.cpp" />
     <ClCompile Include="Engine\Math\Vec4.cpp" />
+    <ClCompile Include="Engine\Miscellaneous\Actor\Camera.cpp" />
+    <ClCompile Include="Engine\Miscellaneous\Component\FpsCameraMovement.cpp" />
     <ClCompile Include="Engine\Miscellaneous\Component\MoveComponent.cpp" />
     <ClCompile Include="Engine\Miscellaneous\Component\PlayerController.cpp" />
     <ClCompile Include="Engine\Physic\Components\BoxColliderComponent.cpp" />
     <ClCompile Include="Game.cpp" />
-    <ClCompile Include="Game\Actor\NDebugCollisions.cpp" />
     <ClCompile Include="Game\Scenes\Debug\DebugCollisionScene.cpp" />
     <ClCompile Include="Game\Scenes\Debug\GLTestScene.cpp" />
     <ClCompile Include="Game\Scenes\PongScene.cpp" />
@@ -60,11 +63,13 @@
     <ClInclude Include="Engine\Core\Class\Actor\Actor.h" />
     <ClInclude Include="Engine\Core\Class\Actor\ActorState.h" />
     <ClInclude Include="Engine\Core\Class\Component\Component.h" />
+    <ClInclude Include="Engine\Core\Class\Mesh\Mesh.h" />
     <ClInclude Include="Engine\Core\Class\Scene\Scene.h" />
     <ClInclude Include="Engine\Core\Dispatcher\EventDispatcher.h" />
     <ClInclude Include="Engine\Core\Dispatcher\IObserver.h" />
     <ClInclude Include="Engine\Core\Render\Asset.h" />
     <ClInclude Include="Engine\Core\Render\Component\AnimatedSpriteComponent.h" />
+    <ClInclude Include="Engine\Core\Render\Component\MeshComponent.h" />
     <ClInclude Include="Engine\Core\Render\Component\SpriteComponent.h" />
     <ClInclude Include="Engine\Core\Render\Interface\IRenderer.h" />
     <ClInclude Include="Engine\Core\Render\OpenGL\RendererGL.h" />
@@ -89,20 +94,26 @@
     <ClInclude Include="Engine\Math\Vec2.h" />
     <ClInclude Include="Engine\Math\Vec3.h" />
     <ClInclude Include="Engine\Math\Vec4.h" />
+    <ClInclude Include="Engine\Miscellaneous\Actor\Camera.h" />
+    <ClInclude Include="Engine\Miscellaneous\Component\FpsCameraMovement.h" />
     <ClInclude Include="Engine\Miscellaneous\Component\MoveComponent.h" />
     <ClInclude Include="Engine\Miscellaneous\Component\PlayerController.h" />
     <ClInclude Include="Engine\Physic\Components\BoxColliderComponent.h" />
     <ClInclude Include="Game.h" />
-    <ClInclude Include="Game\Actor\NDebugCollisions.h" />
     <ClInclude Include="Game\Scenes\Debug\DebugCollisionScene.h" />
     <ClInclude Include="Game\Scenes\Debug\GLTestScene.h" />
     <ClInclude Include="Game\Scenes\PongScene.h" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Engine\Core\Render\Shader\BasicMesh.frag" />
+    <Content Include="Engine\Core\Render\Shader\BasicMesh.vert" />
     <Content Include="Engine\Core\Render\Shader\Simple.frag" />
     <Content Include="Engine\Core\Render\Shader\Simple.vert" />
     <Content Include="Engine\Core\Render\Shader\SpriteShader.frag" />
     <Content Include="Engine\Core\Render\Shader\SpriteShader.vert" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Game\Actor\" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>17.0</VCProjectVersion>
